space for pause and refrfesh icon

--- a/index.html
+++ b/index.html
@@ -33,18 +33,19 @@
     
     <div class="white_side">
         <h1 contenteditable="true">Team B</h1>
+        <div class="flexboxer">
         <div class="blackscore">
             <img src="images/Polygon 1@2x.png" alt="">
-            <h2>0</h2>
+            <h2 class="bscore">0</h2>
             <img src="images/Polygon 2@2x.png">
         </div>
-        <div class="blackofoul">
+        <div class="blackfoul">
             <h2>Fouls</h2>
             <img src="images/Polygon 1@2x.png">
-            <h2>0</h2>
+            <h2 class="bfouls">0</h2>
             <img src="images/Polygon 2@2x.png">
         </div>
-
+        </div>
     </div>
     
 
