--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   <script src="./js/gsap.js"></script>
   <script src="./js/index.js"></script>
   <script src="./js/timer.js"></script>
+  <script src="./sw.js"></script>
 
 </body>
 </html>
